--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,77 @@
+absl-py==1.4.0
 attrs==21.2.0
+box2d-py==2.3.5
+cachetools==5.3.1
+certifi==2023.7.22
 cffi==1.15.0
+charset-normalizer==3.2.0
 click==8.0.3
 cloudpickle==2.0.0
+cmake==3.27.2
 cycler==0.10.0
 Cython==0.29.24
+filelock==3.12.2
 glfw==2.3.0
+google-auth==2.22.0
+google-auth-oauthlib==1.0.0
+grpcio==1.57.0
 gym==0.21.0
+idna==3.4
 imageio==2.9.0
 importlib-resources==5.3.0
 iniconfig==1.1.1
+Jinja2==3.1.2
 kiwisolver==1.3.2
+lit==16.0.6
 lockfile==0.12.2
+Markdown==3.4.4
+MarkupSafe==2.1.3
 matplotlib==3.4.3
+mpmath==1.3.0
+networkx==3.1
 numpy==1.21.3
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
+oauthlib==3.2.2
 opencv-python==4.5.4.58
 packaging==21.0
 Pillow==8.4.0
 pluggy==1.0.0
+protobuf==4.24.2
 py==1.10.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pycparser==2.20
+pygame==2.5.1
 pyglet==1.5.21
 pyparsing==2.4.7
 pytest==6.2.5
 python-dateutil==2.8.2
 PyYAML==6.0
+requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
 scipy==1.7.2
 six==1.16.0
+sympy==1.12
+tensorboard==2.14.0
+tensorboard-data-server==0.7.1
 toml==0.10.2
+torch==2.0.1
+torchaudio==2.0.2
+torchvision==0.15.2
 tqdm==4.62.3
+triton==2.0.0
+typing_extensions==4.7.1
+urllib3==1.26.16
+Werkzeug==2.3.7
 zipp==3.6.0
